<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <HorizontalScrollView
        android:id="@+id/buttons_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_main"
        android:fillViewport="true"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/chart_button"
                style="@style/BrainTrackePagerButton"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/statistics_button_text" />

            <Button
                android:id="@+id/service_button"
                style="@style/BrainTrackePagerButton"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/service_button_text" />

            <Button
                android:id="@+id/targets_button"
                style="@style/BrainTrackePagerButton"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/targets_button_text" />
        </LinearLayout>
    </HorizontalScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none" />

</LinearLayout>